--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,18 +8,143 @@ output:
 
 ## Loading and preprocessing the data
 
+### 1. Load the data (i.e., `read.csv()`).
 
+```{r echo=TRUE}
+file.dsin <- "activity.csv"
+df.source <- read.csv(file.dsin, header = T)
+```
+
+### 2. Process/transform the data (if necessary) into a format suitable for your analysis
+
+```{r echo=TRUE}
+df.dailysum <- aggregate(steps~date, df.source, sum, na.action=na.omit)
+df.dailymean <- aggregate(steps~date, df.source, mean, na.action=na.omit)
+df.intervalmean <- aggregate(steps~interval, df.source, mean, na.action=na.omit)
+```
 
 ## What is mean total number of steps taken per day?
 
+### 1. Make a histogram of the total number of steps taken each day.
 
+```{r echo=TRUE}
+steps <- df.dailysum$steps
+hist(steps, col="red",
+     main="Histogram of Total Daily Step Count",
+     xlab="Total Daily Step Count")
+```
+
+### 2. Calculate and report the mean and median total number of steps taken per day.
+
+```{r echo=TRUE}
+mean(steps)
+median(steps)
+```
 
 ## What is the average daily activity pattern?
 
+### 1. Make a time series plot (i.e., `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis).
 
+```{r echo=TRUE}
+x <- df.intervalmean$interval
+y <- df.intervalmean$steps
+plot(x, y, type="l", col="red",
+     xlab="5-Min Interval",
+     ylab="Mean Step Count")
+```
+
+### 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r echo=TRUE}
+df.intervalmean[which.max(y), ]$interval
+```
 
 ## Imputing missing values
 
+### 1. Calculate and report the total number of missing values in the dataset (i.e., the total number of rows with `NA`s).
 
+sum(is.na(df.source$steps))
+
+### 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+As a compromise between the 2 imputation strategies suggested by the author, let's substitute each missing value with its mean daily step count or its mean interval (5-min) step count, whichever value is the smallest.
+
+```{r echo=TRUE}
+impute <- function(x, y, z) {
+  ifelse(is.na(x), y, z)
+}
+```
+
+### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r echo=TRUE}
+df.imputed <- merge(df.source, df.intervalmean, by="interval", all=T)
+names(df.imputed)[names(df.imputed) == 'steps.x'] <- 'steps'
+names(df.imputed)[names(df.imputed) == 'steps.y'] <- 'steps.intervalmean'
+
+df.imputed <- merge(df.imputed, df.dailymean, by="date", all=T)
+names(df.imputed)[names(df.imputed) == 'steps.x'] <- 'steps'
+names(df.imputed)[names(df.imputed) == 'steps.y'] <- 'steps.dailymean'
+head(df.imputed[df.imputed$date == '2012-10-01',])
+
+df.imputed <- df.imputed[order(df.imputed$date, df.imputed$interval), ]
+df.imputed <- transform(df.imputed, steps.imputed = impute(steps, impute(steps.dailymean, steps.intervalmean, min(steps.dailymean, steps.intervalmean)), steps))
+
+head(df.imputed[df.imputed$date == '2012-10-01',])
+head(df.imputed[df.imputed$date == '2012-10-02',])
+```
+
+### 4. Make a histogram of the total number of steps taken each day. Calculate and report the **mean** and **median** total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+Process/transform the imputed data into a format suitable for the analysis.
+
+```{r echo=TRUE}
+df.imputed.dailysum <- aggregate(steps.imputed~date, df.imputed, sum)
+```
+
+With the summarized imputed data, make a histogram  of the total number of steps taken each day.
+
+```{r echo=TRUE}
+steps.imputed <- df.imputed.dailysum$steps.imputed
+hist(steps.imputed, col="red",
+     main="Histogram of Total Daily Step Count",
+     xlab="Total Daily Step Count")
+```
+
+With the summarized imputed data, calculate and report the mean and median total number of steps taken per day.
+
+```{r echo=TRUE}
+mean(steps.imputed)
+median(steps.imputed)
+```
+
+Imputing missing data as I did on the estimates of the total daily number of steps had the following impacts:
+* Within 2 decimal places of accuracy, data imputation had no impact on the mean daily step count, but it did slightly increase by about 1.19 steps the median daily step count.  More exactly, it shifted the frequency distribution of the total daily step count such that the mean and median daily step count are equal to within 2 decimal places of accuracy.
+* Although the overall shape and centrality of the daily step count remained nearly the same after imputation, the frequency of the most frequently occuring total daily step count (10K <= x < 15K) increased from above 25 to slightly above 35.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+### 1. Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+
+```{r echo=TRUE}
+weekend <- c('Saturday', 'Sunday')
+df.weekdayed <- transform(df.imputed, weekday = weekdays(as.Date(df.imputed$date)))
+head(df.weekdayed)
+df.weekdayed <- transform(df.weekdayed, weekdaytype = ifelse(weekday %in% weekend, 'Weekend', 'Weekday'))
+summary(df.weekdayed)
+```
+
+### 2. Make a panel plot containing a time series plot (i.e., `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+
+```{r echo=TRUE}
+df.weekdayed.intervalmean <- aggregate(steps~interval+weekdaytype, df.weekdayed, mean)
+
+library(lattice)
+
+xyplot(steps ~ interval | weekdaytype,
+       data = df.weekdayed.intervalmean,
+       type="l", col="red",
+       xlab="5-Min Interval",
+       ylab="Mean Step Count",
+       layout = c(1,2))
+```
